# attention-l4ros2

./: CMakeLists.txt  README.md  package.xml
config/: all_types_dictionary.yaml  types_dictionary copy.yaml  types_dictionary.yaml
include/: FocusSelector.hpp  JointController.hpp  Perception.hpp  WillingToSeeSelector.hpp
launch/: attention_hospital_launch.py  attention_launch.py  hospital.launch.py  sim_hospital.launch.py  tiago_hospital.launch.py  view_hospital.launch.py
src/: Attention_nodes.cpp  FocusSelector.cpp  JointController.cpp  Perception.cpp  WillingToSeeSelector.cpp  focus_selector_node.cpp  neck_controller_node.cpp  perception_node.cpp  willing_to_see_node.cpp
worlds/: hospital.world
